main/src/main/java/com/example/main/exception/errors/DataConflictException.java
package com.example.main.exception.errors;

public class DataConflictException extends RuntimeException {
    public DataConflictException(String message) {
        super(message);
    }
}
